OP-19575-Implement-ISD-theme-for-Argo-CD

--- a/ui/src/app/applications/components/filter/filter.scss
+++ b/ui/src/app/applications/components/filter/filter.scss
@@ -33,7 +33,7 @@ $slate: #191826;
             }
 
             &:hover {
-                background: $sidebar-color !important;
+                background: $sidebar-color;
             }
         }
     }
@@ -136,7 +136,7 @@ $slate: #191826;
             }
 
             &:hover {
-                background: $sidebar-color !important;
+                background: $sidebar-color;
             }
         }
     }
