--- a/ui/src/app/applications/components/filter/filter.scss
+++ b/ui/src/app/applications/components/filter/filter.scss
@@ -25,7 +25,7 @@ $slate: #191826;
             background: $slate;
 
             &:hover {
-                background: $sidebar-color !important;
+                background: $sidebar-color;
             }
         }
     }
@@ -118,7 +118,7 @@ $slate: #191826;
             background: $slate;
 
             &:hover {
-                background: $sidebar-color !important;
+                background: $sidebar-color;
             }
         }
     }
