OP-19575-changes regarding Top-Bar in application listing page

--- a/ui/src/assets/styles.css
+++ b/ui/src/assets/styles.css
@@ -9,7 +9,8 @@
     --primary: #6fe5ff;
 }
 
-.top-bar + .top-bar {
+.top-bar + .top-bar,
+.page__content-wrapper .top-bar {
     background: #fff !important;
 }
 
