Argo app created to be logged in backend, ux issue

--- a/ui/src/app/sidebar/sidebar.scss
+++ b/ui/src/app/sidebar/sidebar.scss
@@ -13,7 +13,7 @@
     color: white;
     background-color: $silver-lining;
     overflow: auto;
-    z-index: 0;
+    z-index: 0 !important;
 
     &__logo {
         justify-content: center;
